--- a/packages/shared-types/package.json
+++ b/packages/shared-types/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@weather-api/shared-types",
+  "name": "@weatherah/shared-types",
   "version": "0.1.0",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
